fix header on mobile

--- a/src/modules/component/header/header.css
+++ b/src/modules/component/header/header.css
@@ -27,9 +27,10 @@
         display: none;
     }
     
-    .content-wrapper {
-        width: 100%;
-    }
+.content-wrapper {
+    width: 100%;
+}
+    
 }
 
 @media screen and (min-width: 55em) {
@@ -255,6 +256,12 @@ svg {
     margin-top: 0.5rem;
     margin-right: 1.5rem;
     margin-left: 1.5rem;
+    margin: 0;
+    background-color: #fff;
+    box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
+    color: var(--color-dark);
+    padding-bottom: 15px;
+    border-bottom: 1pt solid var(--color-accent);
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon {
@@ -276,4 +283,13 @@ svg {
 
 .type-label {
     font-size: .8rem;
+}
+
+.content-wrapper {
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
+    color: var(--color-dark);
+    padding-bottom: 15px;
+    border-bottom: 1pt solid var(--color-accent);
 }
